--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,7 +44,9 @@ required-features = ["rdcore"]
 
 [profile.release]
 # We assume we're being delivered via e.g. RPM which supports split debuginfo
-debug = true
+debug = false
+lto = true
+strip = true
 
 [dependencies]
 anyhow = ">= 1.0.38, < 2"
@@ -65,10 +67,9 @@ lazy_static = "^1.4"
 libc = "^0.2"
 nix = { version = ">= 0.24, < 0.28", "default_features" = false, "features" = [ "dir", "ioctl", "mount", "process", "sched", "signal", "user"] }
 nmstate = { version = ">= 2.2.3, < 3", default-features = false, features = ["gen_conf"] }
-openssl = "^0.10"
 pipe = ">= 0.3, < 0.5"
 regex = ">= 1.4, < 2"
-reqwest = { version = ">= 0.10, < 0.13", features = ["blocking"] }
+reqwest = { version = ">= 0.10, < 0.13", default-features = false, features = ["blocking", "rustls-tls"] }
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = "^1.0"
 serde_with = ">= 1.9.4, < 4"
@@ -81,6 +82,7 @@ uuid = { version = ">= 0.8, < 2.0", features = ["v4"] }
 walkdir = "^2.4"
 xz2 = "^0.1"
 zstd = { version = ">= 0.10.0, < 0.14.0", features = ["pkg-config"] }
+sha2 = "0.10.8"
 
 [target.'cfg(target_arch = "s390x")'.dependencies]
 mbrman = ">= 0.5, < 0.6"
